Added first assignment for about and contact us page

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -17,5 +17,41 @@
 
 
 <ion-content padding>
-  
+  <ion-card>
+    <ion-card-header color="primary">
+      Location Information
+    </ion-card-header>
+    <ion-card-content>
+    <address>
+        121, Clear Water Bay Road
+        Clear Water Bay, Kowloon
+        <p>HONG KONG</p>
+      </address>
+      <p>
+          <ion-icon name="call"></ion-icon>:+852 1234 5678
+      </p>
+      <p>
+          <ion-icon name="print"></ion-icon>:+852 8765 4321    
+      </p>
+      <p>
+      <ion-icon name="mail"></ion-icon>:confusion@food.net
+    </p>
+    </ion-card-content>
+    <ion-row color="primary">
+        <ion-col>
+          <button ion-button icon-left clear small>
+            <ion-icon name="call"></ion-icon>
+            <div>CALL</div>
+          </button>
+        </ion-col>
+        <ion-col>
+          <button ion-button icon-left clear small>
+          <ion-icon name="mail"></ion-icon>
+          <div>EMAIL</div>
+          </button>
+        </ion-col>
+      </ion-row>
+  </ion-card>
+
+ 
 </ion-content>
