--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -59,4 +59,18 @@
   <p><span> -- {{comment.author}} {{comment.date | date}}</span></p>
  </ion-item>
 </ion-list>
+
+<!--This button will be displayed only if dish is not user's favorite  
+ outer ion fab is used to fix favorite icon should be displayed at bottm right posistion!-->
+<ion-fab bottom right [hidden]="favorite">
+  <button ion-fab (click)="addToFavorites()">
+   <ion-icon name="heart-outline"></ion-icon>
+  </button>
+</ion-fab>
+
+<ion-fab bottom right *ngIf="favorite">
+  <button ion-fab>
+   <ion-icon name="heart"></ion-icon>
+  </button>
+</ion-fab>
 </ion-content>
