Comment assignment added

--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -8,6 +8,11 @@
 
   <ion-navbar color="primary"r>
     <ion-title>dishdetail</ion-title>
+    <ion-buttons end>
+        <button ion-button icon-only (click)="openActionSheet()">
+          <ion-icon name="more"></ion-icon>
+        </button>
+      </ion-buttons>
   </ion-navbar>
 
 </ion-header>
