cordova plugin for local notifications added

--- a/src/pages/favorites/favorites.html
+++ b/src/pages/favorites/favorites.html
@@ -26,7 +26,7 @@
       </ion-thumbnail>
 
       <h3>{{favorite.name}}</h3>
-      <p>{{favorite.description}}</p>
+      <p>{{favorite.description | uppercase}}</p>
     </ion-item>
     <ion-item-options side="right">
       <button ion-button color="danger"
