--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the ContactPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar color="primary">
@@ -45,7 +40,7 @@
           </button>
         </ion-col>
         <ion-col>
-          <button ion-button icon-left clear small>
+          <button ion-button icon-left clear small (click)="sendEmail()">
           <ion-icon name="mail"></ion-icon>
           <div>EMAIL</div>
           </button>
